# steam-reviews-ai

./: .gitignore  LICENSE.md  README.md  Search.py  main.py  packages.txt  pyproject.toml  requirements.txt  utils.py
.streamlit/: config.toml
pages/: 1-Summary.py  2-About.py
