[project]
name = "steam-reviews-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "nltk>=3.9.1",
    "pandas>=2.0.3",
    "pillow>=10.4.0",
    "scikit-learn>=1.3.2",
    "streamlit>=1.40.1",
    "wordcloud>=1.9.4",
]
